--- a/compose.yaml
+++ b/compose.yaml
@@ -4,21 +4,27 @@ services:
     image: dh-mirror.gitverse.ru/mongo:latest
     volumes:
       - mongodb1_data_container:/data/db
+    networks:
+      - mongonetwork
 
   pymongo_api:
     container_name: pymongo_api
-    build: 
+    build:
       context: api_app
       dockerfile: Dockerfile
     image: kazhem/pymongo_api:1.0.0
     depends_on:
       - mongodb1
+    networks:
+      - mongonetwork
     ports:
       - 8080:8080
     environment:
       MONGODB_URL: "mongodb://mongodb1"
       MONGODB_DATABASE_NAME: "somedb"
 
+networks:
+  mongonetwork:
 
 volumes:
   mongodb1_data_container:
